boulder/tests/compile_fail/scope/scopeless_break.bo
# `break` outside of scope
# (5:

fn scopeless_break() -> u32 {
    break 7;
    7
}